--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = Paul Boyd
 copyright_year   = 2014
 abstract = Benchmarking/Debugging tool for Plack web requests
 
-version = 0.1
+version = 0.2
 
 [GatherDir]
 [PruneCruft]
@@ -23,6 +23,7 @@ version = 0.1
 [PkgVersion]
 
 [Prereqs / RuntimeRequires]
+Getopt::Long = 0
 HTTP::Request = 0
 List::Util = 0
 Plack = 0
