--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = Paul Boyd
 copyright_year   = 2014
 abstract = Benchmarking/Debugging tool for Plack web requests
 
-version = 0.3
+version = 0.4
 
 [GatherDir]
 [PruneCruft]
@@ -21,6 +21,12 @@ version = 0.3
 [ConfirmRelease]
 [UploadToCPAN]
 [PkgVersion]
+
+[GithubMeta]
+user = pboyd
+
+[Prereqs]
+perl = 5.10.1
 
 [Prereqs / RuntimeRequires]
 Getopt::Long = 0
